css/product-info.css
html, body {
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
     
}

body {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    
    font-family: Inter, sans-serif;
    flex: 1; 
}

main {
    background-color: rgba(255, 255, 255, 0.8);
}

footer {
    background-color: rgba(255, 255, 255, 0.8);
    padding: 20px; 
    width: 100%;
    
}

#route {
    
    padding: 20px; 
    margin: 0 auto;
    width: 100%;
    margin-bottom: 0; 
    font-size: 20px;
}

#route a {
    text-decoration: none;
    color: #f0960c;
    font-family: Inter, sans-serif;
    font-weight:300;
}

#product-info {
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
    padding: 20px;
    margin-bottom: 0 px; 
    z-index: 0; 
}


#product-info::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  
    z-index: 1; 
}


#product-info > * {
    position: relative;
    z-index: 2;
}

.product-info-wrapper {
    display: flex;
    gap: 20px; 
    align-items: flex-start;
}

.carousel-container {
    position: relative;
    width: 100%;
    max-width: 650px; 
    margin: 0 auto;
    margin-top: -12px;
}

#large-image img {
    width: 80%;
    height: auto;
    display: block;
    margin: auto;
    border-radius: 9px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
}

.carousel-controls {
    text-align: center;
    margin-top: 10px;
}

#prev-btn {
    border-radius: 50px;
    font-size: 15px;
    color: #ffffff;
    font-weight: 600;
    height: 36px;
    width: 100px;
    border: 3px solid #f3ebeb;
    background-color: rgba(0, 0, 0, 0.9);
}

#next-btn {
    border-radius: 50px;
    font-size: 15px;
    color: #ffffff;
    font-weight: 600;
    height: 36px;
    width: 100px;
    border: 3px solid #f3ebeb;
    background-color: rgba(0, 0, 0, 0.9);
}

.thumbnails {
    display: flex;
    justify-content: center;
    gap: 15px;
    margin-top: 10px;
}

.thumbnails img {
    width: 100px;
    cursor: pointer;
    transition: transform 0.3s;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
}

.thumbnails img:hover {
    transform: scale(1.1);
    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.4);
}

.text {
    flex: 1;
}

#product-name {
    text-align: center;    
    font-size: 40px;
    font-weight: bold;
}

#product-description {
    text-align: center;
    word-break: keep-all;
    margin: 20px;
    font-size: 18px;
    font-weight: normal;
}

#product-tech-specs-btn {
    display: block;
    margin: 0 auto;
    border-radius: 50px;
    font-size: 16px;
    font-style: italic;
    font-weight: 600;
    height: 46px;
    width: 160px;
    border: 5px solid #97CFE7;
    background-color: rgba(151, 207, 231, 0.72);
}

#product-sold-count {
    text-align: right;
    font-size: 20px;
    margin-right: 20px;
    margin-left: 2px;
    margin-top: 2px;
    margin-bottom: 2px;
}

#product-cost {
    text-align: right;
    font-size: 40px;
    font-weight: 800;
    margin-right: 20px;
}

.product-buttons {
    display: block;
    margin: 20px auto;
    border-radius: 50px;
    font-size: 19px;
    color: #ffffff;
    font-weight: 600;
    height: 46px;
    width: 210px;
    border: 4px solid #f3ebeb;
    background-color: #000000;
}

#contact-btn {
    background-color: #f0960c;
}

/*Comentarios*/


#comments-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); /* Distribuye comentarios en columnas */
    gap: 20px; /* Espacio entre los comentarios */
}


#comments-background {
    flex: 1;
    padding: 20px; 
    justify-content: left; 
    align-items: flex-start; 
}

#comments-section {
    width: 100%;
    max-width: 750px;
    margin: 0;
    padding: 20px;
    border-radius: 8px; 
    text-align: left; 
    float: left; 
    background: transparent; 
   
}

#comments-section h2 {
    font-size: 24px; 
    font-weight: bold; 
    text-align: left; 
    margin-bottom: 15px; 
}

.comment {
    flex: 1 1 calc(33.333% - 20px); 
    background-color: #f9f9f9;     
    padding: 15px;          
    margin-bottom: 15px;  
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
    border-radius: 8px;             
    min-width: 280px;               
    box-sizing: border-box;        
   
}

.comment h3 {
    margin: 0; 
    font-size: 18px; 
    font-weight: bold; 
    color: #333; 
}

.comment-header {
    display: flex; 
    align-items: center;
    justify-content: space-between; 
 }

.stars {
    margin-left: 10px; 
    color: #fbc02d; 
    font-size: 30px;
}



#contact-btn {
    background-color: #f0960c;
}

.rating-container {
    height: 100vh; 
}

.rating-section {
    height: 100vh;
    width: 100%;
    position: relative; 
    background-size: cover; 
    background-position: center; 
    background-repeat: no-repeat; 
    padding: 20px; 
    z-index: 1; 

}

.rating-section > * {
    position: relative;
    z-index: 1; 
}

#ratingForm {
    text-align: end;
    margin-right: 3em;
}

.rating-container {
    display: flex;
    flex-direction: column;
    align-items: center; /* Centra el contenido */
}

.rating-stars {
    font-size: 30px; /* Tamaño de las estrellas */
    margin-bottom: 10px; /* Espacio debajo de las estrellas */
    cursor: pointer; /* Cambia el cursor al pasar por encima */
    margin-right: 1.3em;
    display: inline-block;
    width: 6em;

}

.rating-stars .star {
    color: gray; /* Color gris por defecto para todas las estrellas */
}

/* Esta clase se agregará para cambiar el color a dorado */
.rating-stars .star.selected {
    color: gold; /* Color dorado cuando se selecciona */
}


.ratingBtn {
    width: 7em;;
    background-color: #f0960c; /* Color de fondo del botón */
    color: white; /* Color del texto */
    padding: 10px 20px; /* Espaciado interno */
    border: none; /* Sin borde */
    border-radius: 5px; /* Bordes redondeados */
    cursor: pointer; /* Cambia el cursor al pasar por encima */
    font-size: 16px; /* Tamaño de la fuente */
    transition: background-color 0.3s; /* Efecto de transición */
}

.button-calification {
    margin-top: 1em;
    margin-right: 2em;
}

.ratingBtn:hover {
    background-color: #f5a731; /* Color al pasar el ratón por encima */
}

textarea {  
    width: 345px; /* Ancho completo */  
    height: 163px; /* Altura del textarea */  
    padding: 10px; /* Espacio interno */  
    border: 1px solid #ced4da00; /* Borde gris claro */  
    border-radius: 5px; /* Bordes redondeados */  
    resize: none; /* Evitar el redimensionamiento */  
    font-family: 'Inter', Arial, sans-serif; /* Tipo de letra */  
    margin-right: 2em;
}

#ratingForm h3 {  
    margin-right: 11.2em; 
    margin-bottom: -1.6em;
    font-size: 23px;
}

/*SECCION PRODUCTOS RELACIONADOS*/

#related-products-section {
    text-align: center;
    padding: 80px;
    margin-top: 20px;

  }
  
  #related-products-carousel {
    display: flex;
    justify-content: center;
    align-items: center; /* Centra los elementos verticalmente */
    position: relative;
    width: 100%;
  }
  
  #related-products-container {
    display: flex;
    justify-content: space-between;
    overflow: hidden;
    width: 70%; /* Ajusta el ancho según sea necesario */
    margin: 0 20px; /* Espaciado entre botones y el contenedor */
    padding: 20px;
  }
  
  .related-products-grid {
    display: flex;
    transition: transform 0.5s ease-in-out;
    margin-top: 25px;
    padding: 20px;
    
  }
  
  .related-products-grid > div {
    min-width: 25%; /* Cada producto ocupará un cuarto del contenedor */
    box-sizing: border-box;
    padding: 20px;
    background-color: lightblue;
    border-radius: 20px;
    text-align: center;
    margin: 0 2px;
    width: 250px;
    height: 380px;
  }
  
  .related-products-grid img {
    width: 100%; /* La imagen ocupará el 100% del div */
    height: auto; /* Mantiene la proporción de la imagen */
    border-radius: 18px; /* Bordes redondeados para la imagen */
  }
  
  .related-products-grid p {
    font-weight: bold;
    margin-top: 30px;
    text-align: center;
  }

  .carousel-btn {
    background-color: rgba(0, 0, 0, 0.9);
    color: white;
    border: 3px solid #f3ebeb;
    padding: 5px 5px;
    cursor: pointer;
    font-size: 15px;
    height: 36px;
    width: 100px;
    border-radius: 50px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-weight: 600;
  }

  #prev-button {
    left: 5%;
  }
  #next-button {
    right: 5%;
  }


  .carousel-btn:hover {
    background-color: #555;
  }
  
  .carousel-btn:disabled {
    opacity: 0.5;
    cursor: not-allowed;
  }

  

